# cpp_json_rpc

./: .gitignore  CMakeLists.txt  README.md
Documentation/: Structure.md
Documentation/Diagrams/: .$Structure.drawio.bkp  Structure.drawio
Source/CppJsonRpc/: CMakeLists.txt  ConcurrentQueue.hpp  ConcurrentQueue.test.cpp  Error.cpp  Error.hpp  Error.test.cpp  Notification.cpp  Notification.hpp  Notification.test.cpp  Proxy.cpp  Proxy.hpp  Proxy.test.cpp  Request.cpp  Request.hpp  Request.test.cpp  Response.cpp  Response.hpp  Response.test.cpp  SharedMemberTypes.hpp
documentation/: specification.md  structure.md
documentation/diagrams/: structure.drawio
source/cpp_json_rpc/: CMakeLists.txt  concurrent_queue.hpp  concurrent_queue.test.cpp  error.cpp  error.hpp  error.test.cpp  notification.cpp  notification.hpp  notification.test.cpp  proxy.cpp  proxy.hpp  proxy.test.cpp  request.cpp  request.hpp  request.test.cpp  response.cpp  response.hpp  response.test.cpp  session.cpp  session.hpp  session.test.cpp  shared_member_types.hpp
